2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  set FLU_PROJECT_PATH when checking registry.

2008-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/flu.unstable.stable.modules:
	* misc/flu.unstable.unstable.modules:
	  Update the others too.
	  Might consider putting glib/gtk+/pygtk in unstable.unstable.

2008-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/flu.stable.stable.modules:
	  Update.

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	Remove trailing :
	* common/common.mk:
	Also run it on all files in the sourcedir, in case
	they are not the same

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* common/common.mk:
	Add check-local-pep8 which runs the pep8.py script
	on all python files in the tree
	* misc/pep8.py:
	Return a non-zero exit code if there were any errors
	found

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* *.py: make flumotion pep-8 clean, try two
	- whitespace only changes were accidentially not
	  included
	- installed.py/uninstalled.py that were generated
	  are now updated
	- cortado_location.py is pep8 clean now aswell.

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* *.py: make flumotion pep-8 clean

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* common/Makefile.am:
	* conf/Makefile.am:
	* misc/validate-config.py (deleted):
	* common/validate-config.py (added):
	  Move to common since we want to use it in other projects.
	  Change to setup package path so we can use it in other projects.
	* common/common.mk:
	  Remove check-local target since it can't be overridden properly.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Write out the registry with _description tags.
	* flumotion/test/test_registry.py:
	  Update tests for new _description attribute.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* *.py: